# website

./: .envrc  .gitattributes  .gitignore  README.md  astro.config.mjs  contentlayer.config.ts  devenv.nix  devenv.yaml  mdx-components.tsx  mkdocs.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: cloudflare-deploy.yaml
components/: consent.tsx  cookie-banner.tsx  mdx-layout.tsx  posthog-provider.tsx
components/announcement-banner/: announcement-banner.tsx
components/companies/: index.tsx
components/faq/: faq.tsx
components/features/: features.tsx
components/gradients/: background-gradient.tsx
components/hero/: hero.tsx  tabs.tsx
components/highlights/: codepill.tsx  highlights.tsx
components/layout/: footer.tsx  header.tsx  layout.tsx  logo.tsx  navigation.tsx
components/mobile-nav/: mobile-nav.tsx
components/motion/: fall-in-place.tsx
components/nav-link/: nav-link.tsx
components/pricing/: pricing.tsx
components/section/: section-title.tsx  section.tsx
components/typography/: index.tsx
d2/: env-sync-vertical.d2  env-sync.d2  spreadsheet-import-vertical.d2  spreadsheet-import.d2
data/: appulse.tsx  config.tsx  faq.tsx  logo.tsx  pricing.tsx
hooks/: use-route-changed.ts
pages/: _app.tsx  _document.tsx  about.tsx  blog.tsx  eula.mdx  index.tsx  login.tsx  privacy.mdx  signup.tsx  terms.mdx
pages/blog/: [slug].tsx
public/: BingSiteAuth.xml  robots.txt  site.webmanifest
src/: config.mjs  data.js
src/components/: CallToAction.astro  Nav.astro  (+10 more)
theme/: index.ts
(+40 files in other folders)
